added systems and components

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,8 @@ FetchContent_MakeAvailable(EnTT)
 set(EXE_NAME "ege")
 
 set(SOURCES
+    material_system.cpp
+    scene_camera_system.cpp
     render_buffers_system.cpp
     scene_view_system.cpp
     inspector_system.cpp
